Issue #12: Fix vertical alignment of navigation arrows

--- a/css/flexslider_img.css
+++ b/css/flexslider_img.css
@@ -7,3 +7,6 @@
 .flexslider:hover .flex-direction-nav a {
   display: block;
 }
+.flexslider .flex-direction-nav a:before {
+  line-height: 1;
+}
